[gd_scene load_steps=12 format=3 uid="uid://epvok0frdgrm"]

[ext_resource type="Script" uid="uid://db8nee3v6o2aq" path="res://item.gd" id="1_tnite"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3bjbd"]
content_margin_left = 40.0
content_margin_top = 40.0
content_margin_right = 40.0
content_margin_bottom = 40.0
bg_color = Color(0.06666667, 0.06666667, 0.06666667, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.25490198, 0.25490198, 0.25490198, 1)
border_blend = true
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
corner_detail = 20

[sub_resource type="LabelSettings" id="LabelSettings_ymgth"]
font_size = 45

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ymgth"]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color(1, 1, 1, 1)
draw_center = false
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20

[sub_resource type="LabelSettings" id="LabelSettings_m10mn"]
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_sc25q"]
font_size = 30
font_color = Color(0.28627452, 0.28627452, 0.28627452, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8kjhj"]
font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8kjhj"]
content_margin_left = 20.0
content_margin_top = 5.0
content_margin_right = 20.0
content_margin_bottom = 5.0
bg_color = Color(0.11372549, 0.11372549, 0.11372549, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="LabelSettings" id="LabelSettings_dqw4i"]
font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sc25q"]
content_margin_left = 20.0
content_margin_top = 5.0
content_margin_right = 20.0
content_margin_bottom = 5.0
bg_color = Color(1, 0.29716554, 0.48326504, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="LabelSettings" id="LabelSettings_xlj6o"]
font_size = 30

[node name="Item" type="PanelContainer"]
offset_right = 1082.0
offset_bottom = 287.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3bjbd")
script = ExtResource("1_tnite")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 25

[node name="Row1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LectureName" type="Label" parent="VBoxContainer/Row1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 9.6
text = "Digital Design & UX"
label_settings = SubResource("LabelSettings_ymgth")
clip_text = true
text_overrun_behavior = 3

[node name="Timestamp" type="Label" parent="VBoxContainer/Row1"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_ymgth")
text = "19:12 - 21:12"
label_settings = SubResource("LabelSettings_m10mn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Row2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LecturersName" type="Label" parent="VBoxContainer/Row2"]
layout_mode = 2
text = "Prof. Mark Thompson"
label_settings = SubResource("LabelSettings_sc25q")

[node name="RelativeTime" type="Label" parent="VBoxContainer/Row2"]
layout_mode = 2
size_flags_horizontal = 10
text = "ENDS IN 90 min"
label_settings = SubResource("LabelSettings_8kjhj")

[node name="Row3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 35

[node name="Location" type="Label" parent="VBoxContainer/Row3"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_8kjhj")
text = "Studio 4"
label_settings = SubResource("LabelSettings_dqw4i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="Label" parent="VBoxContainer/Row3"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_sc25q")
text = "L4"
label_settings = SubResource("LabelSettings_xlj6o")
